# cyclesphi

./: .gitmodules  CMakeLists.txt
examples/: cube.xml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cycles_standalone.cpp  cycles_xml.cpp  cycles_xml_bin.cpp  cycles_xml_bin.h  cycles_xml_nodes.cpp  cycles_xml_nodes.h
src/cyclesphi/: CMakeLists.txt  cyclesphi.cpp  cyclesphi_common.cpp  cyclesphi_common.h  cyclesphi_mpi.cpp  cyclesphi_space.cpp  frame_display_driver.cpp  frame_display_driver.h  frame_output_driver.cpp  frame_output_driver.h
src/device/: CMakeLists.txt  device.cpp  device.h  kernel.cpp  memory.cpp
src/device/cpu/: kernel.cpp  kernel.h
src/device/cuda/: device_impl.cpp  device_impl.h
src/device/hip/: device_impl.cpp  util.h
src/device/metal/: device_impl.mm
src/device/oneapi/: device_impl.cpp
src/graph/: CMakeLists.txt  node_xml_bin.cpp  node_xml_bin.h  node_xml_util.h
src/integrator/: pass_accessor.h  pass_accessor_cpu.cpp  pass_accessor_cpu.h  pass_accessor_gpu.cpp  path_trace_display.cpp  path_trace_display.h  path_trace_tile.cpp  path_trace_tile.h  path_trace_work_cpu.cpp  path_trace_work_gpu.cpp  path_trace_work_gpu.h
src/kernel/: CMakeLists.txt  types.h
src/kernel/device/cpu/: image.h  kernel_arch.h  kernel_arch_impl.h
src/kernel/device/cuda/: CMakeLists.txt  compat.h  globals.h  kernel.cu
src/kernel/device/gpu/: image.h  kernel.h
src/kernel/device/hip/: CMakeLists.txt  kernel.cpp
src/kernel/device/hiprt/: CMakeLists.txt
src/kernel/device/metal/: context_begin.h
src/kernel/device/oneapi/: CMakeLists.txt  context_begin.h  kernel.cpp
src/kernel/device/optix/: CMakeLists.txt  compat.h
src/kernel/util/: image_3d.h  texture_3d.h
src/scene/: CMakeLists.txt  geometry.cpp  geometry.h  image.cpp  image_cache.cpp  image_oiio.cpp  image_oiio.h  image_vdb.cpp  image_vdb.h  node_write_xml.cpp  node_write_xml.h  object.cpp  scene.cpp  scene.h  scene_write_xml.cpp  scene_write_xml.h  volume.cpp  volume.h
src/scripts/aurora/: build_cycles_aurora.sh  gpu_bind.sh  run_cycles_aurora.sh
src/scripts/karolina/: build_cycles_kar_gpu.sh  gpu_bind_kar.sh  run_cycles_xml.sh
src/scripts/lumi/: build_cycles_lumi.sh  gpu_bind.sh  run_cycles_lumi.sh
src/session/: display_driver.h  output_driver.h  session.cpp  session.h
src/util/: guarded_allocator.h  image_metadata.cpp  texture.h  types_image.h
tools/nanovdb/: CMakeLists.txt  nanovdb_derivates_convert.cpp  nanovdb_multires_convert.cpp
